--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "clean": "rimraf .next out",
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "pnpm clean && pnpm registry:build && next build",
     "start": "next start",
     "lint": "next lint",
-    "registry:build": "node ~/code/shadcn/ui/packages/shadcn/dist/index.js build"
+    "registry:build": "shadcn build"
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.4",
@@ -32,7 +33,8 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "rimraf": "^6.0.1"
   },
   "pnpm": {
     "overrides": {
