feat: init storybok

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,6 +44,7 @@ jobs:
       - name: Build static site
         env:
           NEXT_PUBLIC_BASE_URL: https://nana-software-llc.github.io/yo-ui
+          NEXT_PUBLIC_BASE_PATH: /yo-ui
         run: pnpm run build
 
       - name: Setup Pages
