--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "pnpm clean && pnpm registry:build && next build",
     "start": "next start",
     "lint": "next lint",
-    "registry:build": "shadcn build"
+    "registry:build": "shadcn build",
+    "sb": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.4",
@@ -25,16 +27,27 @@
     "zod": "^3.24.3"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^4.0.1",
     "@eslint/eslintrc": "^3",
+    "@storybook/addon-a11y": "^9.0.16",
+    "@storybook/addon-docs": "^9.0.16",
+    "@storybook/addon-vitest": "^9.0.16",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "19.1.2",
     "@types/react-dom": "19.1.2",
     "eslint": "^9",
     "eslint-config-next": "15.3.1",
+    "eslint-plugin-storybook": "^9.0.16",
+    "rimraf": "^6.0.1",
+    "storybook": "^9.0.16",
     "tailwindcss": "^4",
     "typescript": "^5",
-    "rimraf": "^6.0.1"
+    "@storybook/nextjs-vite": "^9.0.16",
+    "vitest": "^3.2.4",
+    "@vitest/browser": "^3.2.4",
+    "playwright": "^1.53.2",
+    "@vitest/coverage-v8": "^3.2.4"
   },
   "pnpm": {
     "overrides": {
