--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "build": "pnpm clean && pnpm registry:build && next build",
+    "build-storybook": "storybook build",
     "clean": "rimraf .next out",
     "dev": "next dev --turbopack",
-    "build": "pnpm clean && pnpm registry:build && next build",
-    "start": "next start",
     "lint": "next lint",
     "registry:build": "shadcn build && pnpm replace-urls",
+    "replace-urls": "node scripts/replace-urls.js",
     "sb": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "replace-urls": "node scripts/replace-urls.js"
+    "start": "next start"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
@@ -46,7 +46,9 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "hast-util-to-jsx-runtime": "^2.3.6",
     "input-otp": "^1.4.2",
+    "jotai": "^2.12.5",
     "lucide-react": "^0.487.0",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
@@ -57,6 +59,7 @@
     "react-resizable-panels": "^3.0.3",
     "recharts": "^3.1.0",
     "shadcn": "^2.4.1",
+    "shiki": "^3.7.0",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
