--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "hast-util-to-jsx-runtime": "^2.3.6",
     "input-otp": "^1.4.2",
     "jotai": "^2.12.5",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.487.0",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
@@ -74,6 +75,7 @@
     "@storybook/addon-vitest": "^9.0.16",
     "@storybook/nextjs-vite": "^9.0.16",
     "@tailwindcss/postcss": "^4",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^20",
     "@types/react": "19.1.2",
     "@types/react-dom": "19.1.2",
